antlr4-runtime/MxParser.cpp

// Generated from Mx.g4 by ANTLR 4.7.2


#include "MxVisitor.h"

#include "MxParser.h"


using namespace antlrcpp;
using namespace antlr4;

MxParser::MxParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MxParser::~MxParser() {
  delete _interpreter;
}

std::string MxParser::getGrammarFileName() const {
  return "Mx.g4";
}

const std::vector<std::string>& MxParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MxParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MxParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MxParser::ProgramContext::EOF() {
  return getToken(MxParser::EOF, 0);
}

std::vector<MxParser::DeclarationContext *> MxParser::ProgramContext::declaration() {
  return getRuleContexts<MxParser::DeclarationContext>();
}

MxParser::DeclarationContext* MxParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<MxParser::DeclarationContext>(i);
}


size_t MxParser::ProgramContext::getRuleIndex() const {
  return MxParser::RuleProgram;
}


antlrcpp::Any MxParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ProgramContext* MxParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MxParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MxParser::BOOL)
      | (1ULL << MxParser::INT)
      | (1ULL << MxParser::STRING)
      | (1ULL << MxParser::VOID)
      | (1ULL << MxParser::CLASS)
      | (1ULL << MxParser::Identifier))) != 0)) {
      setState(44);
      declaration();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(MxParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

MxParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MxParser::DeclarationContext::getRuleIndex() const {
  return MxParser::RuleDeclaration;
}

void MxParser::DeclarationContext::copyFrom(DeclarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncContext ------------------------------------------------------------------

MxParser::FunctionDeclContext* MxParser::FuncContext::functionDecl() {
  return getRuleContext<MxParser::FunctionDeclContext>(0);
}

MxParser::FuncContext::FuncContext(DeclarationContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MxParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarContext ------------------------------------------------------------------

MxParser::VarDeclContext* MxParser::VarContext::varDecl() {
  return getRuleContext<MxParser::VarDeclContext>(0);
}

MxParser::VarContext::VarContext(DeclarationContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MxParser::VarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ClassContext ------------------------------------------------------------------

MxParser::ClassDeclContext* MxParser::ClassContext::classDecl() {
  return getRuleContext<MxParser::ClassDeclContext>(0);
}

MxParser::ClassContext::ClassContext(DeclarationContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MxParser::ClassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitClass(this);
  else
    return visitor->visitChildren(this);
}
MxParser::DeclarationContext* MxParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, MxParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<MxParser::ClassContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(52);
      classDecl();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<MxParser::FuncContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(53);
      functionDecl();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<MxParser::VarContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(54);
      varDecl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

MxParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::NonArrayTypeContext* MxParser::TypeContext::nonArrayType() {
  return getRuleContext<MxParser::NonArrayTypeContext>(0);
}

std::vector<tree::TerminalNode *> MxParser::TypeContext::LBRACK() {
  return getTokens(MxParser::LBRACK);
}

tree::TerminalNode* MxParser::TypeContext::LBRACK(size_t i) {
  return getToken(MxParser::LBRACK, i);
}

std::vector<tree::TerminalNode *> MxParser::TypeContext::RBRACK() {
  return getTokens(MxParser::RBRACK);
}

tree::TerminalNode* MxParser::TypeContext::RBRACK(size_t i) {
  return getToken(MxParser::RBRACK, i);
}


size_t MxParser::TypeContext::getRuleIndex() const {
  return MxParser::RuleType;
}


antlrcpp::Any MxParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

MxParser::TypeContext* MxParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, MxParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    nonArrayType();
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MxParser::LBRACK) {
      setState(58);
      match(MxParser::LBRACK);
      setState(59);
      match(MxParser::RBRACK);
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NonArrayTypeContext ------------------------------------------------------------------

MxParser::NonArrayTypeContext::NonArrayTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::PrimitiveTypeContext* MxParser::NonArrayTypeContext::primitiveType() {
  return getRuleContext<MxParser::PrimitiveTypeContext>(0);
}

MxParser::ClassTypeContext* MxParser::NonArrayTypeContext::classType() {
  return getRuleContext<MxParser::ClassTypeContext>(0);
}


size_t MxParser::NonArrayTypeContext::getRuleIndex() const {
  return MxParser::RuleNonArrayType;
}


antlrcpp::Any MxParser::NonArrayTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitNonArrayType(this);
  else
    return visitor->visitChildren(this);
}

MxParser::NonArrayTypeContext* MxParser::nonArrayType() {
  NonArrayTypeContext *_localctx = _tracker.createInstance<NonArrayTypeContext>(_ctx, getState());
  enterRule(_localctx, 6, MxParser::RuleNonArrayType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MxParser::BOOL:
      case MxParser::INT:
      case MxParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(65);
        primitiveType();
        break;
      }

      case MxParser::Identifier: {
        enterOuterAlt(_localctx, 2);
        setState(66);
        classType();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimitiveTypeContext ------------------------------------------------------------------

MxParser::PrimitiveTypeContext::PrimitiveTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MxParser::PrimitiveTypeContext::BOOL() {
  return getToken(MxParser::BOOL, 0);
}

tree::TerminalNode* MxParser::PrimitiveTypeContext::INT() {
  return getToken(MxParser::INT, 0);
}

tree::TerminalNode* MxParser::PrimitiveTypeContext::STRING() {
  return getToken(MxParser::STRING, 0);
}


size_t MxParser::PrimitiveTypeContext::getRuleIndex() const {
  return MxParser::RulePrimitiveType;
}


antlrcpp::Any MxParser::PrimitiveTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitPrimitiveType(this);
  else
    return visitor->visitChildren(this);
}

MxParser::PrimitiveTypeContext* MxParser::primitiveType() {
  PrimitiveTypeContext *_localctx = _tracker.createInstance<PrimitiveTypeContext>(_ctx, getState());
  enterRule(_localctx, 8, MxParser::RulePrimitiveType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MxParser::BOOL)
      | (1ULL << MxParser::INT)
      | (1ULL << MxParser::STRING))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassTypeContext ------------------------------------------------------------------

MxParser::ClassTypeContext::ClassTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MxParser::ClassTypeContext::Identifier() {
  return getToken(MxParser::Identifier, 0);
}


size_t MxParser::ClassTypeContext::getRuleIndex() const {
  return MxParser::RuleClassType;
}


antlrcpp::Any MxParser::ClassTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitClassType(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ClassTypeContext* MxParser::classType() {
  ClassTypeContext *_localctx = _tracker.createInstance<ClassTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, MxParser::RuleClassType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(MxParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

MxParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::TypeContext* MxParser::VarDeclContext::type() {
  return getRuleContext<MxParser::TypeContext>(0);
}

tree::TerminalNode* MxParser::VarDeclContext::Identifier() {
  return getToken(MxParser::Identifier, 0);
}

tree::TerminalNode* MxParser::VarDeclContext::SEMI() {
  return getToken(MxParser::SEMI, 0);
}

tree::TerminalNode* MxParser::VarDeclContext::ASSIGN() {
  return getToken(MxParser::ASSIGN, 0);
}

MxParser::ExprContext* MxParser::VarDeclContext::expr() {
  return getRuleContext<MxParser::ExprContext>(0);
}


size_t MxParser::VarDeclContext::getRuleIndex() const {
  return MxParser::RuleVarDecl;
}


antlrcpp::Any MxParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

MxParser::VarDeclContext* MxParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, MxParser::RuleVarDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    type();
    setState(74);
    match(MxParser::Identifier);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MxParser::ASSIGN) {
      setState(75);
      match(MxParser::ASSIGN);
      setState(76);
      expr(0);
    }
    setState(79);
    match(MxParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclContext ------------------------------------------------------------------

MxParser::ClassDeclContext::ClassDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MxParser::ClassDeclContext::CLASS() {
  return getToken(MxParser::CLASS, 0);
}

tree::TerminalNode* MxParser::ClassDeclContext::Identifier() {
  return getToken(MxParser::Identifier, 0);
}

tree::TerminalNode* MxParser::ClassDeclContext::LBRACE() {
  return getToken(MxParser::LBRACE, 0);
}

tree::TerminalNode* MxParser::ClassDeclContext::RBRACE() {
  return getToken(MxParser::RBRACE, 0);
}

std::vector<MxParser::MemberDeclContext *> MxParser::ClassDeclContext::memberDecl() {
  return getRuleContexts<MxParser::MemberDeclContext>();
}

MxParser::MemberDeclContext* MxParser::ClassDeclContext::memberDecl(size_t i) {
  return getRuleContext<MxParser::MemberDeclContext>(i);
}


size_t MxParser::ClassDeclContext::getRuleIndex() const {
  return MxParser::RuleClassDecl;
}


antlrcpp::Any MxParser::ClassDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitClassDecl(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ClassDeclContext* MxParser::classDecl() {
  ClassDeclContext *_localctx = _tracker.createInstance<ClassDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, MxParser::RuleClassDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(MxParser::CLASS);
    setState(82);
    match(MxParser::Identifier);
    setState(83);
    match(MxParser::LBRACE);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MxParser::BOOL)
      | (1ULL << MxParser::INT)
      | (1ULL << MxParser::STRING)
      | (1ULL << MxParser::VOID)
      | (1ULL << MxParser::Identifier))) != 0)) {
      setState(84);
      memberDecl();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(90);
    match(MxParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

MxParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::TypeContext* MxParser::FunctionDeclContext::type() {
  return getRuleContext<MxParser::TypeContext>(0);
}

tree::TerminalNode* MxParser::FunctionDeclContext::Identifier() {
  return getToken(MxParser::Identifier, 0);
}

tree::TerminalNode* MxParser::FunctionDeclContext::LPAREN() {
  return getToken(MxParser::LPAREN, 0);
}

tree::TerminalNode* MxParser::FunctionDeclContext::RPAREN() {
  return getToken(MxParser::RPAREN, 0);
}

MxParser::BlockContext* MxParser::FunctionDeclContext::block() {
  return getRuleContext<MxParser::BlockContext>(0);
}

MxParser::ParameterDeclsContext* MxParser::FunctionDeclContext::parameterDecls() {
  return getRuleContext<MxParser::ParameterDeclsContext>(0);
}

tree::TerminalNode* MxParser::FunctionDeclContext::VOID() {
  return getToken(MxParser::VOID, 0);
}


size_t MxParser::FunctionDeclContext::getRuleIndex() const {
  return MxParser::RuleFunctionDecl;
}


antlrcpp::Any MxParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

MxParser::FunctionDeclContext* MxParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 16, MxParser::RuleFunctionDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MxParser::BOOL:
      case MxParser::INT:
      case MxParser::STRING:
      case MxParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(92);
        type();
        setState(93);
        match(MxParser::Identifier);
        setState(94);
        match(MxParser::LPAREN);
        setState(96);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MxParser::BOOL)
          | (1ULL << MxParser::INT)
          | (1ULL << MxParser::STRING)
          | (1ULL << MxParser::Identifier))) != 0)) {
          setState(95);
          parameterDecls();
        }
        setState(98);
        match(MxParser::RPAREN);
        setState(99);
        block();
        break;
      }

      case MxParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(101);
        match(MxParser::VOID);
        setState(102);
        match(MxParser::Identifier);
        setState(103);
        match(MxParser::LPAREN);
        setState(105);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MxParser::BOOL)
          | (1ULL << MxParser::INT)
          | (1ULL << MxParser::STRING)
          | (1ULL << MxParser::Identifier))) != 0)) {
          setState(104);
          parameterDecls();
        }
        setState(107);
        match(MxParser::RPAREN);
        setState(108);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterDeclsContext ------------------------------------------------------------------

MxParser::ParameterDeclsContext::ParameterDeclsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MxParser::ParameterDeclContext *> MxParser::ParameterDeclsContext::parameterDecl() {
  return getRuleContexts<MxParser::ParameterDeclContext>();
}

MxParser::ParameterDeclContext* MxParser::ParameterDeclsContext::parameterDecl(size_t i) {
  return getRuleContext<MxParser::ParameterDeclContext>(i);
}

std::vector<tree::TerminalNode *> MxParser::ParameterDeclsContext::COMMA() {
  return getTokens(MxParser::COMMA);
}

tree::TerminalNode* MxParser::ParameterDeclsContext::COMMA(size_t i) {
  return getToken(MxParser::COMMA, i);
}


size_t MxParser::ParameterDeclsContext::getRuleIndex() const {
  return MxParser::RuleParameterDecls;
}


antlrcpp::Any MxParser::ParameterDeclsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitParameterDecls(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ParameterDeclsContext* MxParser::parameterDecls() {
  ParameterDeclsContext *_localctx = _tracker.createInstance<ParameterDeclsContext>(_ctx, getState());
  enterRule(_localctx, 18, MxParser::RuleParameterDecls);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    parameterDecl();
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MxParser::COMMA) {
      setState(112);
      match(MxParser::COMMA);
      setState(113);
      parameterDecl();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterDeclContext ------------------------------------------------------------------

MxParser::ParameterDeclContext::ParameterDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::TypeContext* MxParser::ParameterDeclContext::type() {
  return getRuleContext<MxParser::TypeContext>(0);
}

tree::TerminalNode* MxParser::ParameterDeclContext::Identifier() {
  return getToken(MxParser::Identifier, 0);
}


size_t MxParser::ParameterDeclContext::getRuleIndex() const {
  return MxParser::RuleParameterDecl;
}


antlrcpp::Any MxParser::ParameterDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitParameterDecl(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ParameterDeclContext* MxParser::parameterDecl() {
  ParameterDeclContext *_localctx = _tracker.createInstance<ParameterDeclContext>(_ctx, getState());
  enterRule(_localctx, 20, MxParser::RuleParameterDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    type();
    setState(120);
    match(MxParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

MxParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MxParser::ExprContext *> MxParser::ParameterListContext::expr() {
  return getRuleContexts<MxParser::ExprContext>();
}

MxParser::ExprContext* MxParser::ParameterListContext::expr(size_t i) {
  return getRuleContext<MxParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> MxParser::ParameterListContext::COMMA() {
  return getTokens(MxParser::COMMA);
}

tree::TerminalNode* MxParser::ParameterListContext::COMMA(size_t i) {
  return getToken(MxParser::COMMA, i);
}


size_t MxParser::ParameterListContext::getRuleIndex() const {
  return MxParser::RuleParameterList;
}


antlrcpp::Any MxParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ParameterListContext* MxParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 22, MxParser::RuleParameterList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    expr(0);
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MxParser::COMMA) {
      setState(123);
      match(MxParser::COMMA);
      setState(124);
      expr(0);
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MemberDeclContext ------------------------------------------------------------------

MxParser::MemberDeclContext::MemberDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::VarDeclContext* MxParser::MemberDeclContext::varDecl() {
  return getRuleContext<MxParser::VarDeclContext>(0);
}

MxParser::FunctionDeclContext* MxParser::MemberDeclContext::functionDecl() {
  return getRuleContext<MxParser::FunctionDeclContext>(0);
}

MxParser::ClassConstructorContext* MxParser::MemberDeclContext::classConstructor() {
  return getRuleContext<MxParser::ClassConstructorContext>(0);
}


size_t MxParser::MemberDeclContext::getRuleIndex() const {
  return MxParser::RuleMemberDecl;
}

